# llama-agentic

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  QWEN.md  README.md  SECURITY.md  install.ps1  install.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  gitleaks.yml  publish.yml
Formula/: llama-agentic.rb
agent/: __init__.py  a2a_client.py  a2a_config.py  autostart.py  cli.py  config.py  core.py  doctor.py  ignore.py  init_cmd.py  llama_client.py  mcp_client.py  mcp_config.py  memory.py  mode.py  model_manager.py  plugins.py  prompt_ui.py  server_manager.py  session.py  setup.py  stats.py  trust.py
agent/tools/: __init__.py  code.py  edit.py  file.py  find.py  git.py  memory.py  process.py  search.py  shell.py  think.py  ui.py  web.py
docs/: configuration.md  getting-started.md  index.md  llama-agentic-guide.docx  mcp-integration.md  plugin-development.md  tools-reference.md  user-guide.md
plugins/: example_plugin.py
scripts/: benchmark.py  install_global.sh  start_server.sh  switch_model.sh
tests/: test_a2a.py  test_cli.py  test_core.py  test_edit.py  test_mcp.py  test_memory.py  test_mode.py  test_model_manager.py  test_parser.py  test_plugins.py  test_process_bg.py  test_runtime_model_selection.py  test_tools.py  test_trust.py
