[project]
name = "llama-agentic"
version = "0.1.0"
description = "Local agentic AI CLI powered by llama.cpp"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "agent", "llama", "cli", "local-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "duckduckgo-search>=6.0.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
llama-agent = "agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent", "plugins"]

[tool.hatch.build.targets.wheel.shared-data]
"scripts/start_server.sh" = "share/llama-agentic/start_server.sh"
"scripts/switch_model.sh" = "share/llama-agentic/switch_model.sh"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
